[project]
name = "voice-memo"
version = "0.1.0"
description = "Voice memo summarization API using Claude"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.96.0",
    "fastapi>=0.135.3",
    "supabase>=2.29.0",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
]
